update django api v1 and add mail_templated and add api v2

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ drf-yasg[validation]
 djangorestframework-simplejwt[crypto]
 coreapi
 # deployment modules
+
+
+# third party email modules
+django-mail-templated
