--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker-Compose Test
 
 on:
   push:
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Setup Docker compose
-      run: docker-compose up --build -d
+      run: docker compose up -d
     - name: Run Tests
       run: docker exec backend sh -c "flake8 && pytest ."
