--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ djangorestframework
 markdown
 django-filter
 drf-yasg[validation]
-
+djoser
 djangorestframework-simplejwt[crypto]
 coreapi
 # deployment modules
